前端進度更新